# kift

./: .gitignore  CMakeLists.txt  README.md  main.c
audio/: ring.aiff
client/: client.c  client.h  main.c
client/includes/: client.h
client/runer/: functions.c  runer.c  runer.h
lib/PocketSphinx/lib/: libpocketsphinx.3.dylib  libpocketsphinx.la
lib/PocketSphinx/lib/pkgconfig/: pocketsphinx.pc
lib/SamBinary/: sam
lib/SmartString/: smart_string.c  smart_string.h
lib/Sphinx/lib/: libsphinxad.3.dylib  libsphinxad.la  libsphinxbase.la
lib/Sphinx/lib/pkgconfig/: sphinxbase.pc
lib/SphinxBase/lib/: libsphinxad.3.dylib  libsphinxad.la  libsphinxbase.3.dylib  libsphinxbase.la
lib/SphinxBase/lib/pkgconfig/: sphinxbase.pc
libft/: Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/src/: ft_atoi.c  ft_bitarray.c  ft_bzero.c  ft_digilen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putwchar.c  ft_putwcstr.c  ft_strappend.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+34 more)
libft/src/ft_printf/: chars.c  convert_to.c  ints.c  itoutf.c  mods.c  read_tmplt.c  speciefer.c  strings.c  utils.c  utils2.c
libs_src/: Makefile
libs_src/pocketsphinx/: Makefile  config.status  pocketsphinx.pc
libs_src/pocketsphinx/doc/: Makefile  doxytags
libs_src/pocketsphinx/doc/html/: acmod_8c.html  allphone__search_8c_source.html  allphone__search_8h_source.html  config_8h_source.html  dict2pid_8c.html  dict2pid_8h_source.html  dict_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8d034a1e03e98d9b7ac467250bbebdea.html  files.html  fsg__history_8c_source.html  fsg__lextree_8c.html  fsg__lextree_8c_source.html  fsg__lextree_8h_source.html  functions_b.html  functions_c.html  functions_e.html  functions_f.html  functions_g.html  functions_l.html  functions_m.html  functions_q.html  functions_s.html  functions_vars.html  functions_vars_c.html  functions_vars_f.html  functions_vars_i.html  functions_vars_k.html  functions_vars_m.html  functions_vars_o.html  functions_vars_r.html  functions_vars_u.html  functions_vars_w.html  functions_w.html  globals_c.html  globals_defs.html  globals_eval.html  globals_func.html  globals_func_c.html  globals_func_d.html  (+100 more)
libs_src/pocketsphinx/doc/latex/: hmm_8h.tex  mdef_8h.tex  ms__gauden_8h.tex  structphone__t.tex
libs_src/pocketsphinx/doc/xml/: acmod_8c.xml  acmod_8h.xml  allphone__search_8c.xml  dict_8c.xml  (+98 more)
libs_src/pocketsphinx/include/: Makefile
libs_src/pocketsphinx/model/: Makefile
libs_src/pocketsphinx/src/: Makefile
libs_src/pocketsphinx/swig/: Makefile
libs_src/pocketsphinx/test/: Makefile  testfuncs.sh
libs_src/sphinxbase/: Makefile  config.status  libtool  sphinxbase.pc
libs_src/sphinxbase/doc/: Makefile  doxytags
libs_src/sphinxbase/include/: Makefile
libs_src/sphinxbase/src/: Makefile
libs_src/sphinxbase/swig/: Makefile
libs_src/sphinxbase/test/: Makefile
runer/: functions.c
scripts/: setAlarm.scr
server/: Makefile  functions.c  index.html  main.c  server.c  server.h  worker.c
sphinx_src/: Makefile
sphinx_src/sphinxbase/: Makefile.in  configure
sphinx_src/sphinxbase/doc/: Makefile.in
sphinx_src/sphinxbase/include/: Makefile.in
sphinx_src/sphinxbase/src/: Makefile.in
sphinx_src/sphinxbase/swig/: Makefile.in
sphinx_src/sphinxbase/test/: Makefile.in
webserver/: server.c  server.h
(+759 files in other folders)
